kubernetes/apps/default/opencloud/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencloud
  namespace: default
  labels:
    app: opencloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: opencloud
  template:
    metadata:
      labels:
        app: opencloud
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: opencloud
          image: opencloudeu/opencloud-rolling:5.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
              name: http
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: opencloud-config
              mountPath: /etc/opencloud
            - name: opencloud-data
              mountPath: /var/lib/opencloud
            - name: opencloud-config-files
              mountPath: /etc/opencloud/csp.yaml
              subPath: csp.yaml
            - name: opencloud-config-files
              mountPath: /etc/opencloud/banned-password-list.txt
              subPath: banned-password-list.txt
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
      volumes:
        - name: opencloud-config
          persistentVolumeClaim:
            claimName: opencloud-config-pvc-lh
        - name: opencloud-data
          persistentVolumeClaim:
            claimName: opencloud-data-pvc-lh
        - name: opencloud-config-files
          configMap:
            name: opencloud-config-files
